--- a/src/index.css
+++ b/src/index.css
@@ -8,75 +8,15 @@
 
 @import url('./assets/fonts/stylesheet.css');
 
+@import "~swiper/css";
+@import "~swiper/css/effect-fade";
+@import "~swiper/css/navigation";
+@import "~swiper/css/pagination";
 
-/* @font-face {
-  font-family: 'CooperBlkBT';
-  src: url('./assets/fonts/CooperBlkBT-Regular.woff2') format('woff2'),
-    url('./assets/fonts/CooperBlkBT-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
+
+.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  width: 30px;
+  border-radius: 5px;
+  transition: 0.4s;
+  background-color: white;
 }
-
-@font-face {
-  font-family: 'CooperLtBT';
-  src: url('./assets/fonts/CooperLtBT-Bold.woff2') format('woff2'),
-    url('./assets/fonts/CooperLtBT-Bold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'CooperBlkBT';
-  src: url('./assets/fonts/CooperBlkBT-Italic.woff2') format('woff2'),
-    url('./assets/fonts/CooperBlkBT-Italic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'CooperMdBT';
-  src: url('./assets/fonts/CooperMdBT-Regular.woff2') format('woff2'),
-    url('./assets/fonts/CooperMdBT-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'CooperLtBT';
-  src: url('./assets/fonts/CooperLtBT-Italic.woff2') format('woff2'),
-    url('./assets/fonts/CooperLtBT-Italic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'CooperMdBT';
-  src: url('./assets/fonts/CooperMdBT-Italic.woff2') format('woff2'),
-    url('./assets/fonts/CooperMdBT-Italic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'CooperLtBT';
-  src: url('./assets/fonts/CooperLtBT-Regular.woff2') format('woff2'),
-    url('./assets/fonts/CooperLtBT-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'CooperLtBT';
-  src: url('./assets/fonts/CooperLtBT-BoldItalic.woff2') format('woff2'),
-    url('./assets/fonts/CooperLtBT-BoldItalic.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-  font-display: swap;
-} */
