--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,18 @@
   font-family: "Inter", sans-serif;
 }
 
-@import url('./assets/fonts/stylesheet.css');
+@import url("./assets/fonts/stylesheet.css");
 
 @import "~swiper/css";
 @import "~swiper/css/effect-fade";
 @import "~swiper/css/navigation";
 @import "~swiper/css/pagination";
 
-
 .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
   width: 30px;
   border-radius: 5px;
   transition: 0.4s;
-  background-color: white;
+  background-color: #3c072e;
 }
+
+
